# Ava_AI_Development

./: Claude.md  README.md  SPIKE_FIX_CONFIG_CHANGES.yaml  VISUAL_OVERVIEW.txt  apt.txt  installClaudeCode.bash  requirements.txt  run_training.sh  setup_training_data.sh  update_memory_configs.py
code/: .gitignore  README.md  __init__.py  pyproject.toml  pyrightconfig.json
code/configs/: deepspeed_config.json  test_training.yaml
code/configs/distributed/: deepspeed_zero1.yaml  deepspeed_zero2.yaml  deepspeed_zero3.yaml
code/configs/gpu/: base.yaml  large.yaml  small.yaml  tiny.yaml
code/configs/hardware/: a100_80gb.yaml  h100_80gb.yaml
code/configs/research/: quantization_nvfp4.yaml  rag_enabled.yaml
code/configs/rlhf/: test_cpu.yaml
code/docs/: 01_ARCHITECTURE.md  02_TRAINING_GUIDE.md  03_MEMORY_OPTIMIZATION.md  04_LOSS_FUNCTIONS.md  05_OPTIMIZATION_GUIDE.md  06_EVALUATION_GENERATION.md  07_CONFIGURATION_SYSTEM.md  FLOWCHARTS_VISUAL.md  LOSSES_README.md  LOSSES_USAGE_GUIDE.md  QUICK_REFERENCE.md  README.md
code/examples/: adaptive_mtp_integration.py
code/scripts/: __init__.py
code/scripts/1_data_download/: unified_download.py
code/scripts/2_data_prep/: process_all_data.py  retokenize_with_custom.py
code/scripts/3_tokenizer/: train_tokenizer.py
code/scripts/4_Find_Lr/: run_lr_finder_enhanced.py
code/scripts/4_Find_Lr/lr_results/: lr_finder_results.json
code/scripts/5_training/: finetune.py  train.py
code/scripts/6_rhlf_Finetuning/: prepare_prompts.py  test_rlhf_cpu.py  test_training_cpu.py  train_rlhf.py
code/scripts/7_generation/: generate.py
code/src/Ava/: README.md  TRAINING_README.md  __init__.py
code/src/Ava/config/: DYNAMIC_CONFIG_USAGE.md  __init__.py  feature_compatibility.py  training_config.py
code/src/Ava/data/: __init__.py  dataloader.py  multi_column_data.py
code/src/Ava/distributed/: __init__.py  distributed_health_checker.py  distributed_manager.py  memory_monitor.py  rank_aware_error_handler.py  unified_distributed_manager.py
code/src/generation/: __init__.py  generator.py
code/src/rlhf/: __init__.py  ppo_trainer.py  reward_model.py  rlhf_trainer.py
code/tests/: README.md  __init__.py  test_adaptive_mtp.py  test_unified_loss.py
(+47 files in other folders)
